--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,10 @@
   box-sizing: border-box;
 }
 
+input:focus {
+  outline: none;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
