--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -102,16 +102,15 @@ header {
 }
 
 .userActions {
-  width: 100px;
+  width: 200px;
   border: none;
   border-radius: 5px;
   height: 200px;
-  float: right;
   position: fixed;
   right: 10%;
   top: 7vh;
   background-color: white;
-  padding: 5px;
+  padding: 10px;
   z-index: 2;
   box-shadow: 0px 0px 15px 0px rgba(0, 0, 0, 0.25);
   display: none;
@@ -124,6 +123,8 @@ header {
 .userActions li {
   list-style-type: none;
   cursor: pointer;
+  padding: 5px;
+  border-bottom: solid 1px grey;
 }
 
 .userActions ul {
