--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -106,12 +106,13 @@ header {
   border: none;
   border-radius: 5px;
   height: 200px;
+  /* float: right; */
   position: fixed;
   right: 10%;
   top: 7vh;
   background-color: white;
   padding: 10px;
-  z-index: 2;
+  z-index: 9999;
   box-shadow: 0px 0px 15px 0px rgba(0, 0, 0, 0.25);
   display: none;
 }
