--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -133,3 +133,34 @@ header {
   margin: 0;
   text-align: left;
 }
+
+#userPic {
+  width: 40px;
+  height: 40px;
+  border: solid 1px black;
+  border-radius: 50%;
+}
+
+.chooseProfile {
+  display: flex;
+  align-items: center;
+  flex-wrap: nowrap;
+  gap: 20px;
+}
+
+@media screen and (max-width: 768px) {
+  .chooseProfile {
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    left: 0;
+    text-align: center;
+    padding: 20px 10%;
+    border: none;
+    /* gap: 20px; */
+    justify-content: space-between;
+    flex-wrap: nowrap;
+    margin: 0;
+    background-color: white;
+  }
+}
