--- a/src/styles/ProposeKilos.css
+++ b/src/styles/ProposeKilos.css
@@ -3,10 +3,11 @@
 @import "../../node_modules/@syncfusion/ej2-inputs/styles/material.css";
 @import "../../node_modules/@syncfusion/ej2-popups/styles/material.css";
 @import "../../node_modules/@syncfusion/ej2-react-calendars/styles/material.css";
+@import "../../node_modules/@syncfusion/ej2-react-inputs/styles/material.css";
+@import "../../node_modules/@syncfusion/ej2-react-dropdowns/styles/material.css";
 
 .container {
   margin-top: 25vh;
-  /* border: solid 1px red; */
   display: flex;
   justify-content: center;
 }
@@ -15,20 +16,13 @@
   width: 100%;
   padding: 25px;
   border-radius: 10px;
-  /* border: solid 1px black; */
   box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px,
     rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
-  /* box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px, rgb(51, 51, 51) 0px 0px 0px 3px; */
 }
 
-#proposeKilosForm input[type="text"],
-#proposeKilosForm input[type="date"],
-#proposeKilosForm input[type="number"] {
-  width: 100%;
-  margin: 10px 0;
-  border: none;
-  border-bottom: solid 1px black;
+#proposeKilosForm input {
   font-family: var(--textFont);
+  margin: 0 0 5px 0;
 }
 
 #proposeKilosForm input[type="submit"] {
