--- a/src/styles/TravelerNav.css
+++ b/src/styles/TravelerNav.css
@@ -1,9 +1,11 @@
-#travelerNav {
+#travelerNav,
+#senderNav {
   width: 100%;
   height: 100%;
 }
 
-#travelerNav ul {
+#travelerNav ul,
+#senderNav ul {
   list-style: none;
   padding: 0;
   margin: 0;
@@ -29,11 +31,13 @@
 }
 
 /* hide srollbar */
-#travelerNav ul::-webkit-scrollbar {
+#travelerNav ul::-webkit-scrollbar,
+#senderNav ul::-webkit-scrollbar {
   display: none;
 }
 
-#travelerNav {
+#travelerNav,
+#senderNav {
   -ms-overflow-style: none;
   scrollbar-width: none;
 }
