--- a/src/styles/HomeResearch.css
+++ b/src/styles/HomeResearch.css
@@ -30,6 +30,17 @@
   }
 }
 
+#search {
+  width: 50%;
+  text-transform: uppercase;
+  background-color: white;
+  border: solid 1px black;
+  font-weight: bold;
+  border-radius: 5px;
+  padding: 15px;
+  font-family: var(--textFont);
+}
+
 #researchForm input[type="text"],
 .dateContainer {
   /* width: 20%; */
