--- a/src/styles/SignForms.css
+++ b/src/styles/SignForms.css
@@ -1,9 +1,9 @@
 .formBackground {
-  position: absolute;
+  position: fixed;
   top: 0;
   width: 100%;
   height: 100%;
-  z-index: 2;
+  z-index: 8;
   background-color: rgba(0, 0, 0, 0.7);
   display: flex;
   flex-direction: column;
