--- a/src/styles/Advertisement.css
+++ b/src/styles/Advertisement.css
@@ -11,3 +11,9 @@
     rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
   /* box-shadow: rgba(0, 0, 0, 0.45) 0px 25px 20px -20px; */
 }
+
+@media screen and (max-width: 496px) {
+  .advertisement {
+    width: 95%;
+  }
+}
