--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,9 @@
 :root {
   --textFont: "Montserrat", sans-serif;
   --logoFont: "Marck Script", cursive;
-  --blue: #00008b;
+  /* --blue: #00008b; */
+  --blue: #1e3a8a;
+  --bodyBakgroundColor: #f9fafb;
 }
 
 * {
@@ -23,7 +25,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   padding-bottom: 25px;
-  background-color: #f9f9f9;
+  background-color: var(--bodyBakgroundColor);
 }
 
 @media screen and (max-width: 768px) {
