--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -6,6 +6,7 @@ header {
   background-color: white;
   position: fixed;
   top: 0;
+  /* padding: 0 2vw; */
   z-index: 5;
 }
 
@@ -18,9 +19,9 @@ header {
   align-items: center;
 }
 
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 496px) {
   .wrapper {
-    width: 90%;
+    width: 95%;
   }
 }
 
