--- a/src/styles/ShowBookings.css
+++ b/src/styles/ShowBookings.css
@@ -19,6 +19,7 @@
   flex: 0 0 40%;
   display: flex;
   align-items: center;
+  /* background-color: var(--blue); */
   background-color: var(--blue);
   color: white;
   padding: 15px;
@@ -93,6 +94,7 @@
 .showBookingsContainer .booking img {
   width: 120px;
   height: 120px;
+  object-fit: cover;
   border-radius: 50%;
 }
 
