--- a/src/styles/TravelerHome.css
+++ b/src/styles/TravelerHome.css
@@ -24,17 +24,12 @@
 }
 
 .userOffer {
-  position: relative;
+  /* position: relative; */
   width: 300px;
-  height: 100%;
-  /* height: 315px; */
   flex: 0 0 auto;
   border-radius: 15px;
   padding: 10px;
-  overflow-y: auto;
   background-color: white;
-  /* background-color: rgba(85, 85, 85, 0.3); */
-
   box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
 }
 
@@ -47,7 +42,7 @@
   padding: 10px;
   border-radius: 15px;
   color: white;
-  background-color: #00008b;
+  background-color: var(--blue);
   /* background-color: #0cbaba;
   background-color: #00008b;
   background-image: linear-gradient(250deg, #00008b 0%, black 74%); */
@@ -134,7 +129,7 @@
   justify-content: space-between;
   align-items: center;
   background-color: white;
-  color: #00008b;
+  color: var(--blue);
   font-family: var(--textFont);
   font-weight: bold;
 }
