--- a/src/styles/MyKilos.css
+++ b/src/styles/MyKilos.css
@@ -1,13 +1,8 @@
-.TravelerHomeContainer {
+.MyKilosContainer {
   width: 100%;
   height: 100%;
+  border: solid 1px red;
   /* padding-bottom: 10px; */
-  /* background-color: red; */
-}
-
-.travelerHome {
-  width: 100%;
-  /* margin: auto; */
   /* background-color: red; */
 }
 
@@ -19,12 +14,9 @@
   padding: 2vh 2vw 5vh 2vw;
   flex-wrap: nowrap;
   overflow-y: auto;
-  /* height: 350px; */
-  /* border: solid 1px red; */
 }
 
 .userOffer {
-  /* position: relative; */
   width: 300px;
   flex: 0 0 auto;
   border-radius: 15px;
@@ -87,43 +79,20 @@
 .userOffer .dates {
   border-radius: 7px;
   margin-bottom: 10px;
-  /* background-color: #dcdcdc; */
-  /* background-color: rgba(220, 220, 220, 0.6); */
-  /* background-color: rgba(85, 85, 85, 0.3); */
-  /* background: #ece9e6;  */
-  /* background: -webkit-linear-gradient(
-    to right,
-    #ffffff,
-    #ece9e6
-  );
-  background: linear-gradient(
-    to right,
-    #ffffff,
-    #ece9e6
-  );  */
-
   padding: 5px 5px;
 }
 
 .userOffer .offerNumOfkilos,
 .userOffer .offerPrice {
-  /* background-color: #dcdcdc; */
-  /* background-color: rgba(220, 220, 220, 0.6); */
-  /* background-color: rgba(85, 85, 85, 0.3); */
-  /* background: #ece9e6; 
-  background-color: white; */
   border-radius: 7px;
   padding: 5px 5px;
   margin-bottom: 10px;
 }
 
 .actions {
-  /* position: sticky; */
   height: 40px;
-  /* bottom: -10px; */
   border-radius: 10px;
   margin-top: 5px;
-  /* border: solid 1px rgb(243, 243, 249); */
   padding: 5px 10px;
   display: flex;
   justify-content: space-between;
@@ -143,22 +112,6 @@
 #deleteOffer,
 #bookings {
   cursor: pointer;
-}
-
-/* @media screen and (max-width: 768px) {
-  .userOffer {
-    height: 120px;
-    width: 300px;
-  }
-} */
-
-@media screen and (max-width: 480px) {
-  .userOffers {
-    /* height: 400px; */
-  }
-  /* .userOffer {
-    height: 100%;
-  } */
 }
 
 /* scroolbar */
