--- a/src/styles/MyKilos.css
+++ b/src/styles/MyKilos.css
@@ -2,8 +2,19 @@
   width: 100%;
   height: 100%;
   /* border: solid 1px red; */
+  margin-top: 22vh;
+  /* border: solid 1px red; */
   /* padding-bottom: 10px; */
   /* background-color: red; */
+}
+
+.MyKilosContainer h2,
+.MyKilosContainer .infos {
+  padding-left: 2vw;
+}
+
+.MyKilosContainer .infos {
+  font-style: italic;
 }
 
 .userOffers,
@@ -12,7 +23,7 @@
   display: flex;
   gap: 15px;
   width: 100%;
-  padding: 2vh 2vw 5vh 2vw;
+  padding: 0vh 2vw 5vh 2vw;
   flex-wrap: nowrap;
   overflow-y: auto;
   align-items: flex-start;
