--- a/src/styles/Nav.css
+++ b/src/styles/Nav.css
@@ -1,9 +1,14 @@
-#senderNav {
+nav {
   width: 100%;
-  height: 100%;
+  height: 10vh;
+  position: fixed;
+  top: 10vh;
+  background-color: white;
+  opacity: 0.98;
+  z-index: 2;
 }
 
-#senderNav ul {
+nav ul {
   list-style: none;
   padding: 0;
   margin: 0;
@@ -33,11 +38,11 @@
 }
 
 /* hide srollbar */
-#senderNav ul::-webkit-scrollbar {
+nav ul::-webkit-scrollbar {
   display: none;
 }
 
-#senderNav {
+nav {
   -ms-overflow-style: none;
   scrollbar-width: none;
 }
