--- a/src/styles/SignForms.css
+++ b/src/styles/SignForms.css
@@ -11,13 +11,13 @@
   justify-content: center;
   overflow-y: auto;
   padding: 15px 0;
+  backdrop-filter: blur(7px);
 }
 
 .formWrapper,
 .alert {
   width: 40%;
   font-family: var(--textFont);
-  /* margin: auto; */
 }
 @media screen and (max-width: 768px) {
   .formWrapper,
@@ -32,28 +32,13 @@
   }
 }
 
-#signInForm {
-  width: 100%;
-  padding: 25px 0;
-  border-radius: 5px;
-  text-align: center;
-  background-color: white;
-  font-family: var(--textFont);
-}
-
+#signInForm,
 #signUpForm {
-  padding: 25px 0;
+  width: 100%;
+  padding: 25px 2vw;
   border-radius: 5px;
-  background-color: white;
   text-align: center;
-  font-family: var(--textFont);
-}
-
-#signInForm input,
-#signUpForm input,
-select {
-  width: 80%;
-  margin: 2.5px 0;
+  background-color: white;
   font-family: var(--textFont);
 }
 
@@ -61,14 +46,35 @@ select {
 #signUpForm input[type="submit"],
 #signInForm input[type="button"],
 #signUpForm input[type="button"] {
-  border-radius: 25px;
-  border: none;
-  padding: 8px 0;
-  margin: 15px 0;
-  cursor: pointer;
-  background-color: black;
-  color: white;
   font-family: var(--textFont);
+  color: var(--blue);
+  border: none;
+  background-color: transparent;
+  font-weight: bold;
+  font-size: 1rem;
+  cursor: pointer;
+  margin: 5px 0;
+  width: fit-content;
+}
+
+#signInForm input[type="submit"],
+#signUpForm input[type="submit"] {
+  margin-bottom: 20px;
+  margin-top: 10px;
+}
+
+#signInForm input[type="button"],
+#signUpForm input[type="button"] {
+  border: solid 2px var(--blue);
+  border-radius: 5px;
+  padding: 5px 10px;
+  width: 220px;
+}
+
+#signInForm input[type="button"]:hover,
+#signUpForm input[type="button"]:hover {
+  background-color: var(--blue);
+  color: white;
 }
 
 .formSeparator {
@@ -76,7 +82,7 @@ select {
   gap: 5px;
   align-items: center;
   justify-content: center;
-  width: 80%;
+  width: 90%;
   margin: auto;
 }
 
