--- a/src/styles/BookOffer.css
+++ b/src/styles/BookOffer.css
@@ -1,23 +1,50 @@
-/* .bookingInfos {
-  padding: 10px;
-  border-radius: 10px;
-  margin-top: 10px;
-  color: white;
-  background-color: #00008b;
-} */
-
-/* .bookingInfos .e-input-group,
-.bookingInfos .e-float-input,
-.bookingInfos .e-float-input.e-input-group,
-.bookingInfos .e-float-input label.e-float-text {
-  color: white;
-} */
-
-#bookOfferForm fieldset {
-  margin-top: 10px;
+.book-offer.formWrapper {
+  background-color: white;
+  margin: auto;
+  border-radius: 25px;
+  padding: 25px;
+  box-shadow: rgba(0, 0, 0, 0.02) 0px 1px 3px 0px,
+    rgba(27, 31, 35, 0.15) 0px 0px 0px 1px;
 }
 
-/* To change the border-color of the floating-label textbox */
-.bookingInfos .e-control-wrapper {
-  margin-bottom: 20px;
+.book-offer.formWrapper .grid-wrapper {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  column-gap: 25px;
+}
+
+.book-offer.formWrapper .goodsAccepted {
+  list-style: none;
+  padding: 0;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.book-offer.formWrapper .goodsToSend {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.book-offer.formWrapper input[type="submit"] {
+  font-family: var(--textFont);
+  color: var(--blue);
+  border: none;
+  background-color: transparent;
+  font-weight: bold;
+  font-size: 1rem;
+  cursor: pointer;
+  display: block;
+  margin: auto;
+  width: fit-content;
+  margin-top: 25px;
+}
+
+.book-offer.formWrapper .bookingDetails-wrapper {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+  gap: 25px;
+  margin-top: 10px;
 }
