--- a/src/styles/OfferBookings.css
+++ b/src/styles/OfferBookings.css
@@ -1,25 +1,19 @@
 .showBookingsContainer {
-  /* border: solid 2px red; */
   margin-top: 23vh;
   font-family: var(--textFont);
   padding: 0;
-  /* background-color: white; */
 }
 
 .showBookingsContainer .offer {
-  /* border: solid 1px blue; */
   display: flex;
   flex-wrap: wrap;
-  /* align-content: center; */
   justify-content: center;
 }
 
 .showBookingsContainer .offer .offerInfos {
-  /* border: solid 1px red; */
   flex: 0 0 40%;
   display: flex;
   align-items: center;
-  /* background-color: var(--blue); */
   background-color: var(--blue);
   color: white;
   padding: 15px;
@@ -40,14 +34,6 @@
   border-radius: 0 15px 0 0;
 }
 
-.showBookingsContainer .offer .offerInfos:nth-child(5) {
-  /* border-radius: 0 0 0 15px; */
-}
-
-.showBookingsContainer .offer .offerInfos:nth-child(6) {
-  /* border-radius: 0 0 15px 0; */
-}
-
 .showBookingsContainer .offer .offerInfos:last-child {
   border-radius: 0 0 15px 15px;
   flex: 0 0 80%;
@@ -62,8 +48,6 @@
 .showBookingsContainer .offer .infos {
   flex: 1;
   padding: 0 0 0 20px;
-  /* border: solid 1px black; */
-  /* text-align: center; */
 }
 
 .showBookingsContainer .offer .infosGoods {
@@ -72,9 +56,11 @@
 
 .showBookingsContainer .booking {
   /* border: solid 1px red; */
-  box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
-
+  box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
   border-radius: 15px;
+  position: relative;
+  padding: 25px 10px;
+  background-color: white;
 }
 
 .showBookingsContainer .booking .user {
@@ -83,13 +69,13 @@
   gap: 25px;
 }
 
-.showBookingsContainer .booking .user div {
-  /* border: solid 1px red; */
+.showBookingsContainer .booking .user > div {
   align-self: stretch;
   display: flex;
   flex-direction: column;
   justify-content: center;
   gap: 25px;
+  flex: 1;
 }
 
 .showBookingsContainer .booking img {
@@ -106,46 +92,44 @@
   text-transform: capitalize;
 }
 
-.showBookingsContainer .bookings {
-  display: flex;
-  flex-wrap: nowrap;
-  overflow-y: auto;
-  gap: 15px;
-  /* border: solid 2px green; */
-  padding: 0 2vw 5vh 2vw;
-}
-
-.showBookingsContainer .bookings .booking {
-  flex: 0 0 300px;
+.showBookingsContainer .booking .bookingStatus {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  text-align: right;
+  font-style: italic;
   padding: 10px;
+  text-transform: capitalize;
+  font-weight: bold;
+  color: var(--green);
 }
 
-/* scroolbar */
-/* width */
-
-.showBookingsContainer .bookings::-webkit-scrollbar {
-  width: 1px;
-  /* margin: 0 2vw; */
+.showBookingsContainer .booking .action {
+  font-family: var(--textFont);
+  color: var(--blue);
+  border: none;
+  background-color: transparent;
+  font-weight: bold;
+  font-size: 1rem;
+  cursor: pointer;
+  display: block;
+  margin: 5px auto;
+  width: fit-content;
+  text-transform: capitalize;
 }
 
-/* Track */
-
-.showBookingsContainer .bookings::-webkit-scrollbar-track {
-  background: #f1f1f1;
-  border-radius: 15px;
-  margin: 0 2vw;
+.showBookingsContainer .booking .statusindicator {
+  text-align: right;
+  text-transform: capitalize;
+  font-style: italic;
+  font-weight: bold;
+  color: var(--green);
 }
 
-/* Handle */
-
-.showBookingsContainer .bookings::-webkit-scrollbar-thumb {
-  background: #888;
-  border-radius: 15px;
-}
-
-/* Handle on hover */
-.showBookingsContainer .bookings::-webkit-scrollbar-thumb:hover {
-  background: #555;
+.showBookingsContainer .infos {
+  padding-left: 2vw;
+  font-style: italic;
 }
 
 @media screen and (max-width: 700px) {
@@ -161,8 +145,5 @@
   }
   .showBookingsContainer .offer .offerInfos:nth-child(1) {
     border-radius: 15px 15px 0 0;
-  }
-  .showBookingsContainer .bookings::-webkit-scrollbar {
-    display: none;
   }
 }
