--- a/src/styles/ProposeKilos.css
+++ b/src/styles/ProposeKilos.css
@@ -1,11 +1,3 @@
-@import "../../node_modules/@syncfusion/ej2-base/styles/material.css";
-@import "../../node_modules/@syncfusion/ej2-buttons/styles/material.css";
-@import "../../node_modules/@syncfusion/ej2-inputs/styles/material.css";
-@import "../../node_modules/@syncfusion/ej2-popups/styles/material.css";
-@import "../../node_modules/@syncfusion/ej2-react-calendars/styles/material.css";
-@import "../../node_modules/@syncfusion/ej2-react-inputs/styles/material.css";
-@import "../../node_modules/@syncfusion/ej2-react-dropdowns/styles/material.css";
-
 .container {
   margin-top: 25vh;
   /* border: solid 2px blue; */
@@ -20,8 +12,10 @@
   width: 100%;
   padding: 25px;
   border-radius: 10px;
-  box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px,
-    rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
+  /* box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px,
+    rgba(60, 64, 67, 0.15) 0px 2px 6px 2px; */
+  box-shadow: rgba(0, 0, 0, 0.02) 0px 1px 3px 0px,
+    rgba(27, 31, 35, 0.15) 0px 0px 0px 1px;
 }
 
 #proposeKilosForm input {
@@ -30,7 +24,7 @@
 }
 
 #proposeKilosForm input[type="submit"] {
-  width: 100%;
+  /* width: 100%;
   border-radius: 25px;
   border: none;
   padding: 8px 0;
@@ -38,15 +32,35 @@
   cursor: pointer;
   background-color: black;
   color: white;
+  font-family: var(--textFont); */
+
   font-family: var(--textFont);
+  color: var(--blue);
+  border: none;
+  background-color: transparent;
+  font-weight: bold;
+  font-size: 1rem;
+  cursor: pointer;
+  display: block;
+  margin: 5px auto;
+  width: fit-content;
 }
 
 #proposeKilosForm #goods {
   display: flex;
-  justify-content: center;
-  gap: 5vh;
+  /* justify-content: center; */
+  flex-wrap: wrap;
+  /* border: solid 1px red; */
+  gap: 15px;
+  list-style: none;
+  padding: 0;
+  margin: 0;
 }
 
-#goods div {
-  display: inline-block;
+#proposeKilosForm .grid-wrapper {
+  display: grid;
+  grid-template-columns: 1.5fr 1fr;
+  align-items: flex-end;
+  column-gap: 25px;
+  margin-bottom: 25px;
 }
