--- a/src/styles/SignForms.css
+++ b/src/styles/SignForms.css
@@ -28,7 +28,7 @@
 @media screen and (max-width: 480px) {
   .formWrapper,
   .alert {
-    width: 90%;
+    width: 95%;
   }
 }
 
@@ -61,18 +61,32 @@
 #signUpForm input[type="submit"] {
   margin-bottom: 20px;
   margin-top: 10px;
-}
-
-#signInForm input[type="button"],
-#signUpForm input[type="button"] {
   border: solid 2px var(--blue);
   border-radius: 5px;
   padding: 5px 10px;
   width: 220px;
 }
 
-#signInForm input[type="button"]:hover,
-#signUpForm input[type="button"]:hover {
+#signInForm input[type="button"],
+#signUpForm input[type="button"] {
+  /* border: solid 2px var(--blue);
+  border-radius: 5px;
+  padding: 5px 10px;
+  min-width: 220px; */
+
+  font-family: var(--textFont);
+  color: var(--blue);
+  border: none;
+  background-color: transparent;
+  font-weight: bold;
+  font-size: 1rem;
+  cursor: pointer;
+  margin: 5px 0;
+  width: fit-content;
+}
+
+#signInForm input[type="submit"]:hover,
+#signUpForm input[type="submit"]:hover {
   background-color: var(--blue);
   color: white;
 }
